; ModuleID = '/home/carl/AnghaBench/linux/arch/csky/mm/extr_cachev1.c_dma_wb_range.c'
source_filename = "/home/carl/AnghaBench/linux/arch/csky/mm/extr_cachev1.c_dma_wb_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DATA_CACHE = common dso_local global i32 0, align 4
@CACHE_CLR = common dso_local global i32 0, align 4
@CACHE_INV = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dma_wb_range(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = load i64, i64* %4, align 8
  %7 = load i32, i32* @DATA_CACHE, align 4
  %8 = load i32, i32* @CACHE_CLR, align 4
  %9 = or i32 %7, %8
  %10 = load i32, i32* @CACHE_INV, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @cache_op_range(i64 %5, i64 %6, i32 %11, i32 1)
  ret void
}

declare dso_local i32 @cache_op_range(i64, i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
